--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="landing.html"><strong aria-hidden="true">1.</strong> Ethstaker Deposit CLI</a></li><li class="chapter-item expanded "><a href="quick_setup.html"><strong aria-hidden="true">2.</strong> Quick Setup</a></li><li class="chapter-item expanded affix "><li class="part-title">Commands</li><li class="chapter-item expanded "><a href="new_mnemonic.html"><strong aria-hidden="true">3.</strong> New Mnemonic</a></li><li class="chapter-item expanded "><a href="existing_mnemonic.html"><strong aria-hidden="true">4.</strong> Existing Mnemonic</a></li><li class="chapter-item expanded "><a href="generate_bls_to_execution_change.html"><strong aria-hidden="true">5.</strong> Generate BLS to Execution Change</a></li><li class="chapter-item expanded "><a href="exit_transaction_keystore.html"><strong aria-hidden="true">6.</strong> Exit Transaction Keystore</a></li><li class="chapter-item expanded "><a href="exit_transaction_mnemonic.html"><strong aria-hidden="true">7.</strong> Exit Transaction Mnemonic</a></li><li class="chapter-item expanded "><a href="partial_deposit.html"><strong aria-hidden="true">8.</strong> Partial Deposit</a></li><li class="chapter-item expanded "><a href="test_keystore.html"><strong aria-hidden="true">9.</strong> Test Keystore</a></li><li class="chapter-item expanded affix "><li class="part-title">File formats</li><li class="chapter-item expanded "><a href="keystore_file.html"><strong aria-hidden="true">10.</strong> Keystore</a></li><li class="chapter-item expanded "><a href="deposit_data_file.html"><strong aria-hidden="true">11.</strong> Deposit Data</a></li><li class="chapter-item expanded affix "><li class="part-title">Development</li><li class="chapter-item expanded "><a href="local_development.html"><strong aria-hidden="true">12.</strong> Local Development</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="landing.html"><strong aria-hidden="true">1.</strong> Ethstaker Deposit CLI</a></li><li class="chapter-item expanded "><a href="quick_setup.html"><strong aria-hidden="true">2.</strong> Quick Setup</a></li><li class="chapter-item expanded affix "><li class="part-title">Commands</li><li class="chapter-item expanded "><a href="new_mnemonic.html"><strong aria-hidden="true">3.</strong> New Mnemonic</a></li><li class="chapter-item expanded "><a href="existing_mnemonic.html"><strong aria-hidden="true">4.</strong> Existing Mnemonic</a></li><li class="chapter-item expanded "><a href="generate_bls_to_execution_change.html"><strong aria-hidden="true">5.</strong> Generate BLS to Execution Change</a></li><li class="chapter-item expanded "><a href="exit_transaction_keystore.html"><strong aria-hidden="true">6.</strong> Exit Transaction Keystore</a></li><li class="chapter-item expanded "><a href="exit_transaction_mnemonic.html"><strong aria-hidden="true">7.</strong> Exit Transaction Mnemonic</a></li><li class="chapter-item expanded "><a href="partial_deposit.html"><strong aria-hidden="true">8.</strong> Partial Deposit</a></li><li class="chapter-item expanded "><a href="test_keystore.html"><strong aria-hidden="true">9.</strong> Test Keystore</a></li><li class="chapter-item expanded affix "><li class="part-title">File formats</li><li class="chapter-item expanded "><a href="keystore_file.html"><strong aria-hidden="true">10.</strong> Keystore</a></li><li class="chapter-item expanded "><a href="deposit_data_file.html"><strong aria-hidden="true">11.</strong> Deposit Data</a></li><li class="chapter-item expanded "><a href="bls_to_execution_change_file.html"><strong aria-hidden="true">12.</strong> BLS to execution change</a></li><li class="chapter-item expanded affix "><li class="part-title">Development</li><li class="chapter-item expanded "><a href="local_development.html"><strong aria-hidden="true">13.</strong> Local Development</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -449,6 +449,8 @@ Including sensitive arguments when executing CLI commands poses a security risk,
 <p><strong><code>--devnet_chain_setting</code></strong>: The custom chain setting of a devnet or testnet. Note that it will override your <code>--chain</code> choice. This should be a JSON string containing an object with the following keys: network_name, genesis_fork_version, exit_fork_version and genesis_validator_root.</p>
 </li>
 </ul>
+<h2 id="output-files-2"><a class="header" href="#output-files-2">Output files</a></h2>
+<p>A successful call to this command will result in one <a href="bls_to_execution_change_file.html">BLS to execution change file</a> created.</p>
 <h2 id="example-usage-2"><a class="header" href="#example-usage-2">Example Usage</a></h2>
 <pre><code class="language-sh">./deposit generate-bls-to-execution-change
 </code></pre>
@@ -633,6 +635,28 @@ Including sensitive arguments when executing CLI commands poses a security risk,
   }
 ]
 </code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="bls-to-execution-change-file"><a class="header" href="#bls-to-execution-change-file">BLS to execution change file</a></h1>
+<p>A BLS to execution change file is created when calling the <strong><a href="generate_bls_to_execution_change.html">generate-bls-to-execution-change</a></strong> command.</p>
+<p>The BLS to execution change file is a JSON file. It contains a list of messages to change the withdrawal credentials for one or many validators. The format of the BLS to execution change file is loosly based on the input for the POST <code>/eth/v1/beacon/pool/bls_to_execution_changes</code> <a href="https://ethereum.github.io/beacon-APIs/#/Beacon/submitPoolBLSToExecutionChange">API endpoint</a> as defined by <a href="https://github.com/ethereum/beacon-APIs">the Ethereum Beacon APIs</a>. Part of this content is based on the <a href="https://github.com/ethereum/consensus-specs/blob/v1.3.0/specs/capella/beacon-chain.md#signedblstoexecutionchange">SignedBLSToExecutionChange</a> container as defined in the <a href="https://github.com/ethereum/consensus-specs/">Ethereum Consensus Specifications</a>.</p>
+<h2 id="broadcasting"><a class="header" href="#broadcasting">Broadcasting</a></h2>
+<p>If you have access to a beacon node client running on your target network, you can publish these messages simply by calling the POST <code>/eth/v1/beacon/pool/bls_to_execution_changes</code> <a href="https://ethereum.github.io/beacon-APIs/#/Beacon/submitPoolBLSToExecutionChange">API endpoint</a> and passing the content of the BLS to execution change file as the payload. You can also use <a href="https://beaconcha.in/tools/broadcast">the Beaconcha.in Broadcast Signed Messages tool</a> which might be easier for most users.</p>
+<h2 id="example-1"><a class="header" href="#example-1">Example</a></h2>
+<pre><code class="language-JSON">[
+  {
+    "message":{
+      "validator_index":"1804776",
+      "from_bls_pubkey":"0x970245df5f9cf7a082db195136a3066412b62e8bf04e21d7c3408d7fb36f34f20c4cb0883e798b82523b466f7a61c838",
+      "to_execution_address":"0x4d496ccc28058b1d74b7a19541663e21154f9c84"
+    },
+    "signature":"0xa1e47e6b1fdf4dd5f1dd3ddb3d47d2dcf446d096d49d90afef06a38dc02fba6b4d16d1dc1184c791e54666dabb8bdedd0660bc9bb3bc5d0e592eaf5f0c978cca4fcafe4037672940d6f1a44d2a33503c30cb98ca695979b1de9e321a8a694bc2",
+    "metadata":{
+      "network_name":"holesky",
+      "genesis_validators_root":"0x9143aa7c615a7f7115e2b6aac319c03529df8242ae705fba9df39b79c59fa8b1",
+      "deposit_cli_version":"0.1.4-dev"
+    }
+  }
+]
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="local-development-instructions"><a class="header" href="#local-development-instructions">Local Development Instructions</a></h1>
 <p>To install the <code>ethstaker-deposit-cli</code>, follow these steps:</p>
 <h2 id="prerequisites"><a class="header" href="#prerequisites">Prerequisites</a></h2>
@@ -641,6 +665,13 @@ Including sensitive arguments when executing CLI commands poses a security risk,
 <li><strong>Git</strong>: Version control system to clone the repository. <a href="https://git-scm.com/downloads">Download Git</a></li>
 <li><strong>Python 3.9+</strong>: The programming language required to run the tool. <a href="https://www.python.org/downloads/">Download Python</a></li>
 <li><strong>pip</strong>: Package installer for Python, which is included with Python 3.9+.</li>
+</ul>
+<p>On Windows, you'll need:</p>
+<ul>
+<li><strong>Git for Windows</strong>: Version control system to clone the repository. Configure it to associate <code>.sh</code> files with <code>bash</code>. <a href="https://git-scm.com/download/win">Download GfW</a></li>
+<li><strong>Windows Terminal</strong>: Optional but recommended command line console. Configure GfW to install a Git Bash profile. <a href="https://apps.microsoft.com/detail/9n0dx20hk701">Download Windows Terminal</a></li>
+<li><strong>Python 3.9+</strong>: The programming language required to run the tool. <a href="https://apps.microsoft.com/detail/9ncvdn91xzqp">Download Python</a></li>
+<li><strong>Visual Studio C++</strong>: The compiler required to build some of the dependencies of the tool. <a href="https://visualstudio.microsoft.com/vs/features/cplusplus/">Download VS C++</a></li>
 </ul>
 <h2 id="local-development-steps"><a class="header" href="#local-development-steps">Local Development Steps</a></h2>
 <ol>
