--- a/quick_setup.html
+++ b/quick_setup.html
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="landing.html"><strong aria-hidden="true">1.</strong> Ethstaker Deposit CLI</a></li><li class="chapter-item expanded "><a href="quick_setup.html" class="active"><strong aria-hidden="true">2.</strong> Quick Setup</a></li><li class="chapter-item expanded affix "><li class="part-title">Commands</li><li class="chapter-item expanded "><a href="new_mnemonic.html"><strong aria-hidden="true">3.</strong> New Mnemonic</a></li><li class="chapter-item expanded "><a href="existing_mnemonic.html"><strong aria-hidden="true">4.</strong> Existing Mnemonic</a></li><li class="chapter-item expanded "><a href="generate_bls_to_execution_change.html"><strong aria-hidden="true">5.</strong> Generate BLS to Execution Change</a></li><li class="chapter-item expanded "><a href="generate_bls_to_execution_change_keystore.html"><strong aria-hidden="true">6.</strong> Generate BLS to Execution Change Keystore</a></li><li class="chapter-item expanded "><a href="exit_transaction_keystore.html"><strong aria-hidden="true">7.</strong> Exit Transaction Keystore</a></li><li class="chapter-item expanded "><a href="exit_transaction_mnemonic.html"><strong aria-hidden="true">8.</strong> Exit Transaction Mnemonic</a></li><li class="chapter-item expanded "><a href="partial_deposit.html"><strong aria-hidden="true">9.</strong> Partial Deposit</a></li><li class="chapter-item expanded "><a href="test_keystore.html"><strong aria-hidden="true">10.</strong> Test Keystore</a></li><li class="chapter-item expanded affix "><li class="part-title">File formats</li><li class="chapter-item expanded "><a href="keystore_file.html"><strong aria-hidden="true">11.</strong> Keystore</a></li><li class="chapter-item expanded "><a href="deposit_data_file.html"><strong aria-hidden="true">12.</strong> Deposit Data</a></li><li class="chapter-item expanded "><a href="bls_to_execution_change_file.html"><strong aria-hidden="true">13.</strong> BLS to Execution Change</a></li><li class="chapter-item expanded "><a href="bls_to_execution_change_keystore_file.html"><strong aria-hidden="true">14.</strong> BLS to Execution Change Keystore</a></li><li class="chapter-item expanded "><a href="signed_exit_transaction_file.html"><strong aria-hidden="true">15.</strong> Signed Exit Transaction</a></li><li class="chapter-item expanded affix "><li class="part-title">Development</li><li class="chapter-item expanded "><a href="local_development.html"><strong aria-hidden="true">16.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="release_process.html"><strong aria-hidden="true">17.</strong> Release Process</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="landing.html"><strong aria-hidden="true">1.</strong> Ethstaker Deposit CLI</a></li><li class="chapter-item expanded "><a href="quick_setup.html" class="active"><strong aria-hidden="true">2.</strong> Quick Setup</a></li><li class="chapter-item expanded "><a href="other_install_options.html"><strong aria-hidden="true">3.</strong> Other Install Options</a></li><li class="chapter-item expanded affix "><li class="part-title">Commands</li><li class="chapter-item expanded "><a href="new_mnemonic.html"><strong aria-hidden="true">4.</strong> New Mnemonic</a></li><li class="chapter-item expanded "><a href="existing_mnemonic.html"><strong aria-hidden="true">5.</strong> Existing Mnemonic</a></li><li class="chapter-item expanded "><a href="generate_bls_to_execution_change.html"><strong aria-hidden="true">6.</strong> Generate BLS to Execution Change</a></li><li class="chapter-item expanded "><a href="generate_bls_to_execution_change_keystore.html"><strong aria-hidden="true">7.</strong> Generate BLS to Execution Change Keystore</a></li><li class="chapter-item expanded "><a href="exit_transaction_keystore.html"><strong aria-hidden="true">8.</strong> Exit Transaction Keystore</a></li><li class="chapter-item expanded "><a href="exit_transaction_mnemonic.html"><strong aria-hidden="true">9.</strong> Exit Transaction Mnemonic</a></li><li class="chapter-item expanded "><a href="partial_deposit.html"><strong aria-hidden="true">10.</strong> Partial Deposit</a></li><li class="chapter-item expanded "><a href="test_keystore.html"><strong aria-hidden="true">11.</strong> Test Keystore</a></li><li class="chapter-item expanded affix "><li class="part-title">File formats</li><li class="chapter-item expanded "><a href="keystore_file.html"><strong aria-hidden="true">12.</strong> Keystore</a></li><li class="chapter-item expanded "><a href="deposit_data_file.html"><strong aria-hidden="true">13.</strong> Deposit Data</a></li><li class="chapter-item expanded "><a href="bls_to_execution_change_file.html"><strong aria-hidden="true">14.</strong> BLS to Execution Change</a></li><li class="chapter-item expanded "><a href="bls_to_execution_change_keystore_file.html"><strong aria-hidden="true">15.</strong> BLS to Execution Change Keystore</a></li><li class="chapter-item expanded "><a href="signed_exit_transaction_file.html"><strong aria-hidden="true">16.</strong> Signed Exit Transaction</a></li><li class="chapter-item expanded affix "><li class="part-title">Development</li><li class="chapter-item expanded "><a href="local_development.html"><strong aria-hidden="true">17.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="release_process.html"><strong aria-hidden="true">18.</strong> Release Process</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -175,7 +175,13 @@
                     <main>
                         <h1 id="quick-setup"><a class="header" href="#quick-setup">Quick Setup</a></h1>
 <p>This guide will walk you through the steps to download and set up the <code>ethstaker-deposit-cli</code> for your operating system.</p>
+<p><strong>Build requirements</strong></p>
+<ul>
+<li><a href="https://www.python.org/about/gettingstarted/">Python <strong>3.9+</strong></a></li>
+<li><a href="https://pip.pypa.io/en/stable/installing/">pip3</a></li>
+</ul>
 <h2 id="step-1-download-the-latest-release"><a class="header" href="#step-1-download-the-latest-release">Step 1: Download the Latest Release</a></h2>
+<h3 id="download-binary-executable-file"><a class="header" href="#download-binary-executable-file">Download binary executable file</a></h3>
 <ol>
 <li>
 <p>Navigate to the <a href="https://github.com/eth-educators/ethstaker-deposit-cli/releases">Releases page</a> of the <code>ethstaker-deposit-cli</code> repository.</p>
@@ -195,6 +201,7 @@
 <p>Open a terminal or command prompt and navigate to the extracted folder</p>
 </li>
 </ol>
+<p>For other installation options, including building with python or virtualenv and docker image instructions, go <a href="other_install_options.html">here</a></p>
 <h2 id="step-2-verify-the-installation"><a class="header" href="#step-2-verify-the-installation">Step 2: Verify the Installation</a></h2>
 <ol>
 <li>
@@ -217,6 +224,7 @@
 <h2 id="step-3-usage"><a class="header" href="#step-3-usage">Step 3: Usage</a></h2>
 <p><strong>Windows users:</strong> You should replace <code>./deposit</code> with <code>deposit.exe</code> to run properly.</p>
 <p><strong>MacOS users:</strong> In order to run from the terminal, you must first open the file to bypass MacOS code signing issues. Do so by right clicking the <code>deposit</code> file and then selecting <code>Open</code>.</p>
+<p><strong>Linux users:</strong> On Unix-based systems, keystores and the deposit_data*.json have 440/-r--r----- file permissions (user &amp; group read only). This improves security by limiting which users and processes that have access to these files. If you are getting permission denied errors when handling your keystores, consider changing which user/group owns the file (with chown) or, if need be, change the file permissions with chmod.</p>
 <p>Determine which command best suites what you would like to accomplish:</p>
 <ul>
 <li>
@@ -249,7 +257,7 @@
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="new_mnemonic.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="other_install_options.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -263,7 +271,7 @@
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="new_mnemonic.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="other_install_options.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
