--- a/print.html
+++ b/print.html
@@ -308,9 +308,9 @@ Please be sure that your ETH is deposited only to this deposit contract address,
 </ol>
 <h2 id="step-3-usage"><a class="header" href="#step-3-usage">Step 3: Usage</a></h2>
 <p><strong>Windows users:</strong> You should replace <code>./deposit</code> with <code>deposit.exe</code> to run properly.</p>
-<p><strong>MacOS users:</strong> In order to run from the terminal, you must first open the file to bypass MacOS code signing issues. Do so by right clicking the <code>deposit</code> file and then selecting <code>Open</code>.</p>
+<p><strong>MacOS users:</strong> In order to run from the terminal, you must first open the file to bypass MacOS code signing issues. Do so by right-clicking the <code>deposit</code> file and then selecting <code>Open</code>.</p>
 <p><strong>Linux users:</strong> On Unix-based systems, keystores and the deposit_data*.json have 440/-r--r----- file permissions (user &amp; group read only). This improves security by limiting which users and processes that have access to these files. If you are getting permission denied errors when handling your keystores, consider changing which user/group owns the file (with chown) or, if need be, change the file permissions with chmod.</p>
-<p>Determine which command best suites what you would like to accomplish:</p>
+<p>Determine which command best suits what you would like to accomplish:</p>
 <ul>
 <li>
 <p><strong><a href="new_mnemonic.html">new-mnemonic</a></strong>: Used to generate a new mnemonic, validator keys, and deposit file. It is not recommended to use this command if you have existing validators.</p>
@@ -527,7 +527,7 @@ Including sensitive arguments when executing CLI commands poses a security risk,
 <p><strong><code>--mnemonic_language</code></strong>: The language of the BIP-39 mnemonic. Options are: 'chinese_simplified', 'chinese_traditional', 'czech', 'english', 'french', 'italian', 'japanese', 'korean', 'portuguese', 'spanish'.</p>
 </li>
 <li>
-<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'holesky', etc...</p>
+<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'sepolia', 'holesky', 'mekong', or 'ephemery'.</p>
 </li>
 <li>
 <p><strong><code>--num_validators</code></strong>: Number of validators to create.</p>
@@ -537,6 +537,12 @@ Including sensitive arguments when executing CLI commands poses a security risk,
 </li>
 <li>
 <p><strong><code>--withdrawal_address</code></strong>: The Ethereum address that will be used in withdrawal. It typically starts with '0x' followed by 40 hexadecimal characters. Please make sure you have full control over the address you choose here. Once you set a withdrawal address on chain, it cannot be changed.</p>
+</li>
+<li>
+<p><strong><code>--compounding / --regular-withdrawal</code></strong>: Generates compounding validators with 0x02 withdrawal credentials for a 2048 ETH maximum effective balance or generate regular validators with 0x01 withdrawal credentials for a 32 ETH maximum effective balance. Use of this option requires a withdrawal address. This feature is only supported on networks that have undergone the Pectra fork. Defaults to regular withdrawal.</p>
+</li>
+<li>
+<p><strong><code>--amount</code></strong>: The amount to deposit to these validators in ether denomination. Must be at least 1 ether and can not have greater precision than 1 gwei. Use of this option requires compounding validators. Defaults to 32 ether.</p>
 </li>
 <li>
 <p><strong><code>--pbkdf2</code></strong>: Will use pbkdf2 key encryption instead of scrypt for generated keystore files as defined in <a href="https://eips.ethereum.org/EIPS/eip-2335#decryption-key">EIP-2335</a>. This can be a good alternative if you intend to work with a large number of keys, as it can improve performance. pbkdf2 encryption is, however, less secure than scrypt. You should only use this option if you understand the associated risks and have familiarity with encryption.</p>
@@ -565,7 +571,7 @@ Including sensitive arguments when executing CLI commands poses a security risk,
 <h2 id="optional-arguments-1"><a class="header" href="#optional-arguments-1">Optional Arguments</a></h2>
 <ul>
 <li>
-<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'holesky', etc...</p>
+<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'sepolia', 'holesky', 'mekong', or 'ephemery'.</p>
 </li>
 <li>
 <p><strong><code>--mnemonic</code></strong>: The mnemonic you used to create withdrawal credentials. <span class="warning"></span></p>
@@ -587,6 +593,12 @@ Including sensitive arguments when executing CLI commands poses a security risk,
 </li>
 <li>
 <p><strong><code>--withdrawal_address</code></strong>: The Ethereum address that will be used in withdrawal. It typically starts with '0x' followed by 40 hexadecimal characters. Please make sure you have full control over the address you choose here. Once you set a withdrawal address on chain, it cannot be changed.</p>
+</li>
+<li>
+<p><strong><code>--compounding / --regular-withdrawal</code></strong>: Generates compounding validators with 0x02 withdrawal credentials for a 2048 ETH maximum effective balance or generate regular validators with 0x01 withdrawal credentials for a 32 ETH maximum effective balance. Use of this option requires a withdrawal address. This feature is only supported on networks that have undergone the Pectra fork. Defaults to regular withdrawal.</p>
+</li>
+<li>
+<p><strong><code>--amount</code></strong>: The amount to deposit to these validators in ether denomination. Must be at least 1 ether and can not have greater precision than 1 gwei. Use of this option requires compounding validators. Defaults to 32 ether.</p>
 </li>
 <li>
 <p><strong><code>--pbkdf2</code></strong>: Will use pbkdf2 key derivation instead of scrypt for generated keystore files as defined in <a href="https://eips.ethereum.org/EIPS/eip-2335#decryption-key">EIP-2335</a>. This can be a good alternative if you intend to work with a large number of keys, as it can improve performance however it is less secure. You should only use this option if you understand the associated risks and have familiarity with encryption.</p>
@@ -617,7 +629,7 @@ Including sensitive arguments when executing CLI commands poses a security risk,
 <p><strong><code>--bls_to_execution_changes_folder</code></strong>: The path to store the change JSON file.</p>
 </li>
 <li>
-<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'holesky', etc.</p>
+<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'sepolia', 'holesky', 'mekong', or 'ephemery'.</p>
 </li>
 <li>
 <p><strong><code>--mnemonic</code></strong>: The mnemonic you used to create withdrawal credentials. <span class="warning"></span></p>
@@ -659,7 +671,7 @@ This command is associated with the a proposed solution to update withdrawal cre
 <h2 id="optional-arguments-3"><a class="header" href="#optional-arguments-3">Optional Arguments</a></h2>
 <ul>
 <li>
-<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'holesky', etc.</p>
+<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'sepolia', 'holesky', 'mekong', or 'ephemery'.</p>
 </li>
 <li>
 <p><strong><code>--keystore</code></strong>: The keystore file associating with the validator you wish to sign with. This keystore file should match the provided validator index.</p>
@@ -694,7 +706,7 @@ Including sensitive arguments when executing CLI commands poses a security risk,
 <h2 id="optional-arguments-4"><a class="header" href="#optional-arguments-4">Optional Arguments</a></h2>
 <ul>
 <li>
-<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'holesky', etc.</p>
+<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'sepolia', 'holesky', 'mekong', or 'ephemery'.</p>
 </li>
 <li>
 <p><strong><code>--keystore</code></strong>: The keystore file associating with the validator you wish to exit.</p>
@@ -729,7 +741,7 @@ Including sensitive arguments when executing CLI commands poses a security risk,
 <h2 id="optional-arguments-5"><a class="header" href="#optional-arguments-5">Optional Arguments</a></h2>
 <ul>
 <li>
-<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'holesky', etc.</p>
+<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'sepolia', 'holesky', 'mekong', or 'ephemery'.</p>
 </li>
 <li>
 <p><strong><code>--mnemonic</code></strong>: The mnemonic you used during key generation. <span class="warning"></span></p>
@@ -771,7 +783,7 @@ If you wish to create a validator with 0x00 credentials, you must use the <stron
 <h2 id="optional-arguments-6"><a class="header" href="#optional-arguments-6">Optional Arguments</a></h2>
 <ul>
 <li>
-<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'holesky', etc.</p>
+<p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'sepolia', 'holesky', 'mekong', or 'ephemery'.</p>
 </li>
 <li>
 <p><strong><code>--keystore</code></strong>: The keystore file associating with the validator you wish to deposit to.</p>
@@ -784,6 +796,9 @@ If you wish to create a validator with 0x00 credentials, you must use the <stron
 </li>
 <li>
 <p><strong><code>--withdrawal_address</code></strong>: The withdrawal address of the existing validator or the desired withdrawal address.</p>
+</li>
+<li>
+<p><strong><code>--compounding / --regular-withdrawal</code></strong>: Generates compounding validators with 0x02 withdrawal credentials for a 2048 ETH maximum effective balance or generate regular validators with 0x01 withdrawal credentials for a 32 ETH maximum effective balance. Use of this option requires a withdrawal address. This feature is only supported on networks that have undergone the Pectra fork. Defaults to regular withdrawal.</p>
 </li>
 <li>
 <p><strong><code>--output_folder</code></strong>: The folder path for the <code>deposit-*</code> JSON file.</p>
@@ -845,7 +860,7 @@ Including sensitive arguments when executing CLI commands poses a security risk,
 <li><strong>deposit_data_root</strong>: The deposit data root value to be passed to the deposit function call.</li>
 <li><strong>fork_version</strong>: The fork version of the network that this deposit file was created for.</li>
 <li><strong>network_name</strong>: The network name of the network that this deposit file was created for.</li>
-<li><strong>deposit_cli_version</strong>: The tool version used to create this file.</li>
+<li><strong>deposit_cli_version</strong>: The tool version used to create this file. We are currently faking this value to work around <a href="https://github.com/eth-educators/ethstaker-deposit-cli/issues/216">an issue</a> with the Launchpad.</li>
 </ul>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><code class="language-JSON">[
@@ -875,7 +890,7 @@ Including sensitive arguments when executing CLI commands poses a security risk,
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="bls-to-execution-change-file"><a class="header" href="#bls-to-execution-change-file">BLS to Execution Change file</a></h1>
 <p>A BLS to execution change file is created when calling the <strong><a href="generate_bls_to_execution_change.html">generate-bls-to-execution-change</a></strong> command.</p>
-<p>The BLS to execution change file is a JSON file. It contains a list of messages to change the withdrawal credentials for one or many validators. The format of the BLS to execution change file is loosly based on the input for the POST <code>/eth/v1/beacon/pool/bls_to_execution_changes</code> <a href="https://ethereum.github.io/beacon-APIs/#/Beacon/submitPoolBLSToExecutionChange">API endpoint</a> as defined by <a href="https://github.com/ethereum/beacon-APIs">the Ethereum Beacon APIs</a>. Part of this content is based on the <a href="https://github.com/ethereum/consensus-specs/blob/dev/specs/capella/beacon-chain.md#signedblstoexecutionchange">SignedBLSToExecutionChange</a> container as defined in the <a href="https://github.com/ethereum/consensus-specs/">Ethereum Consensus Specifications</a>.</p>
+<p>The BLS to execution change file is a JSON file. It contains a list of messages to change the withdrawal credentials for one or many validators. The format of the BLS to execution change file is loosely based on the input for the POST <code>/eth/v1/beacon/pool/bls_to_execution_changes</code> <a href="https://ethereum.github.io/beacon-APIs/#/Beacon/submitPoolBLSToExecutionChange">API endpoint</a> as defined by <a href="https://github.com/ethereum/beacon-APIs">the Ethereum Beacon APIs</a>. Part of this content is based on the <a href="https://github.com/ethereum/consensus-specs/blob/dev/specs/capella/beacon-chain.md#signedblstoexecutionchange">SignedBLSToExecutionChange</a> container as defined in the <a href="https://github.com/ethereum/consensus-specs/">Ethereum Consensus Specifications</a>.</p>
 <h2 id="broadcasting"><a class="header" href="#broadcasting">Broadcasting</a></h2>
 <p>If you have access to a beacon node client running on your target network, you can publish these messages simply by calling the POST <code>/eth/v1/beacon/pool/bls_to_execution_changes</code> <a href="https://ethereum.github.io/beacon-APIs/#/Beacon/submitPoolBLSToExecutionChange">API endpoint</a> and passing the content of the BLS to execution change file as the payload. You can also use <a href="https://beaconcha.in/tools/broadcast">the Beaconcha.in Broadcast Signed Messages tool</a> which might be easier for most users.</p>
 <h2 id="example-1"><a class="header" href="#example-1">Example</a></h2>
